test/tests/compiler/13_floating-point_numbers/invalid_parse/invalid_type_specifier_2.plx
pub fn main(none) i32 {
    # "double double" is not a valid type specifier
    d: f64 f64 = 10.0
    return 0
}
